--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -13771,10 +13771,9 @@ body {
 }
 
 .site-mobile-menu .site-mobile-menu-body {
-    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     position: relative;
-    padding: 0 20px 20px 20px;
+    padding: 0px 0px 0px 20px;
     height: calc(100vh - 52px);
     padding-bottom: 150px;
 }
