--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -6,19 +6,7 @@
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
-}
-
-::-webkit-scrollbar-track {
-    background: #132D46;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #fff;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #888888;
+    width: 0px;
 }
 
 body {
@@ -34,27 +22,13 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.cor-v {
-    background-color: #132D46;
-    color: #fff;
-}
-
-.cor-f {
-    background-color: #fff;
-    color: #132D46;
-}
-
-.color-i {
-    color: #132D46;
-}
-
 .preloader {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #132D46;
+    background-color: #FEE119;
     z-index: 9999;
     display: flex;
     align-items: center;
@@ -89,7 +63,7 @@ body {
 
     100% {
         transform: rotate(360deg);
-        box-shadow: 1px 5px 2px #132D46;
+        box-shadow: 1px 5px 2px #FEE119;
     }
 }
 
@@ -295,12 +269,12 @@ sup {
 }
 
 a {
-    color: #132D46;
+    color: #FEE119;
     text-decoration: underline;
 }
 
 a:hover {
-    color: 132D46;
+    color: FEE119;
 }
 
 a:not([href]):not([class]),
@@ -2901,8 +2875,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2914,8 +2888,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -3013,7 +2987,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #132D46;
+    background-color: #FEE119;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3050,7 +3024,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #132D46;
+    background-color: #FEE119;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3559,21 +3533,21 @@ fieldset:disabled .btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-check:focus+.btn-primary,
 .btn-primary:focus {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(38, 65, 101, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(38, 65, 101, 0.5);
 }
@@ -3584,8 +3558,8 @@ fieldset:disabled .btn {
 .btn-primary.active,
 .show>.btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-check:checked+.btn-primary:focus,
@@ -3600,8 +3574,8 @@ fieldset:disabled .btn {
 .btn-primary:disabled,
 .btn-primary.disabled {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-secondary {
@@ -3652,9 +3626,11 @@ fieldset:disabled .btn {
 }
 
 .btn-success {
-    color: #132D46;
+    color: black !important;
+    font-size: 18px;
+    font-weight: 600;
     background-color: #fff;
-    border-color: #132D46;
+    border-color: #FEE119;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -3662,15 +3638,15 @@ fieldset:disabled .btn {
 
 .btn-success:hover {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-check:focus+.btn-success,
 .btn-success:focus {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 69, 158, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(0, 94, 172, 0.5);
 }
@@ -3681,8 +3657,8 @@ fieldset:disabled .btn {
 .btn-success.active,
 .show>.btn-success.dropdown-toggle {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-check:checked+.btn-success:focus,
@@ -3697,8 +3673,8 @@ fieldset:disabled .btn {
 .btn-success:disabled,
 .btn-success.disabled {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-info {
@@ -3937,20 +3913,14 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-    color: #132D46;
-    border-color: #132D46;
+    color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
-}
-
-.btn-check:focus+.btn-outline-primary,
-.btn-outline-primary:focus {
-    -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 32, 74, 0.5);
-    box-shadow: 0 0 0 0.25rem rgba(0, 32, 74, 0.5);
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-check:checked+.btn-outline-primary,
@@ -3959,22 +3929,13 @@ fieldset:disabled .btn {
 .btn-outline-primary.active,
 .btn-outline-primary.dropdown-toggle.show {
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
-}
-
-.btn-check:checked+.btn-outline-primary:focus,
-.btn-check:active+.btn-outline-primary:focus,
-.btn-outline-primary:active:focus,
-.btn-outline-primary.active:focus,
-.btn-outline-primary.dropdown-toggle.show:focus {
-    -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 32, 74, 0.5);
-    box-shadow: 0 0 0 0.25rem rgba(0, 32, 74, 0.5);
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .btn-outline-primary:disabled,
 .btn-outline-primary.disabled {
-    color: #132D46;
+    color: #FEE119;
     background-color: transparent;
 }
 
@@ -4274,12 +4235,12 @@ fieldset:disabled .btn {
 
 .btn-link {
     font-weight: 400;
-    color: #132D46;
+    color: #FEE119;
     text-decoration: underline;
 }
 
 .btn-link:hover {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .btn-link:disabled,
@@ -4639,7 +4600,7 @@ fieldset:disabled .btn {
 .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #132D46;
+    background-color: #FEE119;
 }
 
 .dropdown-item.disabled,
@@ -4687,7 +4648,7 @@ fieldset:disabled .btn {
 .dropdown-menu-dark .dropdown-item.active,
 .dropdown-menu-dark .dropdown-item:active {
     color: #fff;
-    background-color: #132D46;
+    background-color: #FEE119;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled,
@@ -4848,7 +4809,7 @@ fieldset:disabled .btn {
 .nav-link {
     display: block;
     padding: 0.5rem 1rem;
-    color: #132D46;
+    color: #FEE119;
     text-decoration: none;
     -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
@@ -4865,7 +4826,7 @@ fieldset:disabled .btn {
 
 .nav-link:hover,
 .nav-link:focus {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .nav-link.disabled {
@@ -4920,7 +4881,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #132D46;
+    background-color: #FEE119;
 }
 
 .nav-fill>.nav-link,
@@ -6047,7 +6008,7 @@ fieldset:disabled .btn {
 .page-link {
     position: relative;
     display: block;
-    color: #132D46;
+    color: #FEE119;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #dee2e6;
@@ -6068,14 +6029,14 @@ fieldset:disabled .btn {
 
 .page-link:hover {
     z-index: 2;
-    color: #132D46;
+    color: #FEE119;
     background-color: #e9ecef;
     border-color: #dee2e6;
 }
 
 .page-link:focus {
     z-index: 3;
-    color: #132D46;
+    color: #FEE119;
     background-color: #e9ecef;
     outline: 0;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 32, 74, 0.25);
@@ -6089,8 +6050,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .page-item.disabled .page-link {
@@ -6312,7 +6273,7 @@ fieldset:disabled .btn {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #132D46;
+    background-color: #FEE119;
     -webkit-transition: width 0.6s ease;
     -o-transition: width 0.6s ease;
     transition: width 0.6s ease;
@@ -6417,8 +6378,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #132D46;
-    border-color: #132D46;
+    background-color: #FEE119;
+    border-color: #FEE119;
 }
 
 .list-group-item+.list-group-item {
@@ -8077,12 +8038,12 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .link-primary:hover,
 .link-primary:focus {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .link-secondary {
@@ -8587,7 +8548,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-    border-color: #132D46 !important;
+    border-color: #FEE119 !important;
 }
 
 .border-secondary {
@@ -9574,7 +9535,9 @@ body {
 
 .bg-success {
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
+    background-color: #FEE119 !important;
+    color: #000 !important;
+    font-weight: 600;
 }
 
 .bg-info {
@@ -13457,8 +13420,8 @@ body {
 
 .logo {
     font-size: 24px;
-    color: rgba(255, 255, 255, 0.8) !important;
-    font-weight: 500;
+    color: black !important;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13468,9 +13431,8 @@ body {
     color: #fff !important;
 }
 
-.logoimg {
-    width: 30px;
-    margin-right: 5px;
+.mr-6 {
+    margin-right: 16px;
 }
 
 .site-nav {
@@ -13480,6 +13442,7 @@ body {
     top: 0;
     z-index: 9;
     width: 100%;
+    color: #000 !important;
 }
 
 .site-nav h1,
@@ -13498,15 +13461,15 @@ body {
 }
 
 .site-nav .site-navigation .site-menu>li>a {
-    font-size: 14px;
     padding: 10px 15px;
     display: inline-block;
     text-decoration: none !important;
-    color: rgba(255, 255, 255, 0.5);
+    color: black !important;
+    font-weight: 500;
 }
 
 .site-nav .site-navigation .site-menu>li>a:hover {
-    color: #fff;
+    color: #fff !important;
 }
 
 .site-nav .site-navigation .site-menu>li.cta-button a {
@@ -13518,12 +13481,14 @@ body {
 
 .site-nav .site-navigation .site-menu>li.cta-button a:hover {
     color: #000;
-    background: #132D46;
-    border-color: #132D46;
+    background: #FEE119;
+    border-color: #FEE119;
 }
 
 .site-nav .site-navigation .site-menu>li.active>a {
-    color: #fff;
+    color: black !important;
+    font-weight: 600;
+    font-size: large;
 }
 
 .site-nav .site-navigation .site-menu .has-children {
@@ -13600,7 +13565,7 @@ body {
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown .active a {
-    color: #132D46 !important;
+    color: #FEE119 !important;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li {
@@ -13616,7 +13581,7 @@ body {
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li>a:hover {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>a:before {
@@ -13632,13 +13597,13 @@ body {
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>.dropdown li a:hover,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>ul li a:hover {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:hover>a,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:active>a,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:focus>a {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .site-nav .site-navigation .site-menu .has-children:hover>a,
@@ -13771,7 +13736,6 @@ body {
 }
 
 .site-mobile-menu .site-mobile-menu-body {
-    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     position: relative;
     padding: 0 20px 20px 20px;
@@ -13794,7 +13758,7 @@ body {
 }
 
 .site-mobile-menu .site-nav-wrap a:hover {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .site-mobile-menu .site-nav-wrap li {
@@ -13803,7 +13767,7 @@ body {
 }
 
 .site-mobile-menu .site-nav-wrap li.active>a {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
@@ -13937,11 +13901,11 @@ body {
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a:hover,
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a.active {
-    color: #132D46 !important;
+    color: #FEE119 !important;
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li.active a {
-    color: #132D46 !important;
+    color: #FEE119 !important;
 }
 
 .sticky-wrapper .shrink {
@@ -14065,7 +14029,7 @@ h5,
 .h5,
 .logo {
     font-family: "Work Sans", sans-serif;
-    color: #132D46;
+    color: black;
 }
 
 a {
@@ -14117,12 +14081,12 @@ textarea {
 }
 
 .menu-bg-wrap {
-    background-color: #132D46;
+    background-color: #FEE119;
     padding: 20px 30px;
     position: relative;
     float: left;
     width: 100%;
-    border-radius: 7px;
+    border-radius: 8px;
     -webkit-box-shadow: 0 15px 30px -15px rgba(0, 0, 0, 0.1);
     box-shadow: 0 15px 30px -15px rgba(0, 0, 0, 0.1);
 }
@@ -14132,7 +14096,7 @@ textarea {
     background-size: cover;
     background-position: cnter center;
     background-repeat: no-repeat;
-    background-color: #132D46;
+    background-color: #FEE119;
 }
 
 .hero.overlay {
@@ -14206,10 +14170,11 @@ textarea {
 }
 
 .hero .form-search .btn {
-    background-color: #132D46;
+    background-color: #FEE119;
     padding-left: 30px;
     padding-right: 30px;
-    color: #fff;
+    color: black;
+    font-weight: 600;
 }
 
 .hero .form-search .btn:hover,
@@ -14412,7 +14377,7 @@ textarea {
 
 .property-slider-wrap .tns-nav button.tns-nav-active:before,
 .img-property-slide-wrap .tns-nav button.tns-nav-active:before {
-    background-color: #132D46;
+    background-color: #FEE119;
 }
 
 .property-item.mb-30 {
@@ -14569,7 +14534,7 @@ textarea {
 
 .feature-h:hover [class^="icon-"],
 .feature-h:focus [class^="icon-"] {
-    color: #132D46;
+    color: #FEE119;
 }
 
 .img-about img {
@@ -14599,7 +14564,7 @@ textarea {
     width: 40px;
     height: 40px;
     color: #fff;
-    background: #132D46;
+    background: #FEE119;
     border-radius: 50%;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14626,8 +14591,8 @@ textarea {
 }
 
 .social.dark-hover a:hover {
-    color: #132D46;
-    border: 2px solid #132D46;
+    color: #FEE119;
+    border: 2px solid #FEE119;
 }
 
 .links-arrow-before li {
@@ -14747,7 +14712,7 @@ textarea {
     padding: 7px 20px;
     border-radius: 30px;
     background: rgba(0, 32, 74, 0.1);
-    color: #132D46;
+    color: #FEE119;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14756,7 +14721,7 @@ textarea {
 
 #property-nav span:hover,
 #property-nav span.active {
-    background: #132D46;
+    background: #FEE119;
     color: #fff !important;
 }
 
@@ -14768,7 +14733,7 @@ textarea {
 
 #property-nav .prev:hover,
 #property-nav .next:hover {
-    color: #132D46;
+    color: #FEE119;
 }
 
 #property-nav .prev {
@@ -14808,7 +14773,7 @@ textarea {
 }
 
 .box-feature [class^="flaticon-"] {
-    color: #132D46;
+    color: #FEE119;
     font-size: 60px;
     margin: 0 0 10px 0;
     display: block;
@@ -14824,13 +14789,13 @@ textarea {
     font-weight: 700;
     border-radius: 50%;
     background: rgba(0, 32, 74, 0.1);
-    color: #132D46;
+    color: #FEE119;
     text-align: center;
 }
 
 .custom-pagination a:hover,
 .custom-pagination a.active {
-    background: #132D46;
+    background: #FEE119;
     color: #fff;
 }
 
@@ -14897,7 +14862,7 @@ textarea {
 }
 
 .testimonial-slider-wrap .tns-nav button.tns-nav-active:before {
-    background-color: #132D46;
+    background-color: #FEE119;
 }
 
 #testimonial-nav span {
@@ -14906,7 +14871,7 @@ textarea {
     padding: 7px 20px;
     border-radius: 30px;
     background: rgba(0, 32, 74, 0.1);
-    color: #132D46;
+    color: #FEE119;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14915,7 +14880,7 @@ textarea {
 
 #testimonial-nav span:hover,
 #testimonial-nav span.active {
-    background: #132D46;
+    background: #FEE119;
     color: #fff !important;
 }
 
@@ -14982,7 +14947,7 @@ nav[aria-label="breadcrumb"] li:before {
     float: left;
     width: 44px;
     height: 44px;
-    background: #132D46;
+    background: #FEE119;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -15012,7 +14977,7 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer {
-    background: #132D46;
+    background: #FEE119;
     font-size: 14px;
     color: #fff;
     padding: 70px 0;
@@ -15035,13 +15000,13 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer a:hover:before {
-    background: #132D46;
+    background: #FEE119;
 }
 
 .site-footer .footer-cta h2,
 .site-footer .footer-cta .h2 {
     font-size: 30px;
-    color: #132D46;
+    color: #FEE119;
 }
 
 .site-footer .btn:before {
@@ -15059,7 +15024,7 @@ nav[aria-label="breadcrumb"] li:before {
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 15px;
-    color: #132D46;
+    color: #FEE119;
 }
 
 .site-footer .widget .links {
@@ -15097,6 +15062,6 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer .social li a:hover {
-    background: #132D46;
+    background: #FEE119;
     color: #fff;
 }
