--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -13461,11 +13461,12 @@ body {
 }
 
 .site-nav .site-navigation .site-menu>li>a {
+    font-size: 18px !important;
     padding: 10px 15px;
     display: inline-block;
     text-decoration: none !important;
     color: black !important;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .site-nav .site-navigation .site-menu>li>a:hover {
@@ -13814,7 +13815,8 @@ body {
 
 .site-mobile-menu .site-nav-wrap>li>a {
     padding-left: 20px;
-    font-size: 14px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .site-mobile-menu .site-nav-wrap>li>ul {
@@ -13924,14 +13926,14 @@ body {
 .burger.light:before,
 .burger.light span,
 .burger.light:after {
-    background: #fff;
+    background: #000;
 }
 
 .burger:before,
 .burger span,
 .burger:after {
     width: 100%;
-    height: 2px;
+    height: 3px;
     display: block;
     background: #000;
     border-radius: 2px;
@@ -13951,15 +13953,15 @@ body {
 }
 
 .burger:before {
-    top: 4px;
+    top: 9px;
 }
 
 .burger span {
-    top: 15px;
+    top: 19px;
 }
 
 .burger:after {
-    top: 26px;
+    top: 29px;
 }
 
 /* Hover */
