--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -28,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #FEE119;
+    background-color: #5A8039;
     z-index: 9999;
     display: flex;
     align-items: center;
@@ -63,7 +63,7 @@ body {
 
     100% {
         transform: rotate(360deg);
-        box-shadow: 1px 5px 2px #FEE119;
+        box-shadow: 1px 5px 2px #5A8039;
     }
 }
 
@@ -269,12 +269,12 @@ sup {
 }
 
 a {
-    color: #FEE119;
+    color: #5A8039;
     text-decoration: underline;
 }
 
 a:hover {
-    color: FEE119;
+    color: 5A8039;
 }
 
 a:not([href]):not([class]),
@@ -2875,8 +2875,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2888,8 +2888,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2987,7 +2987,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #FEE119;
+    background-color: #5A8039;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3024,7 +3024,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #FEE119;
+    background-color: #5A8039;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3533,21 +3533,21 @@ fieldset:disabled .btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-check:focus+.btn-primary,
 .btn-primary:focus {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(38, 65, 101, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(38, 65, 101, 0.5);
 }
@@ -3558,8 +3558,8 @@ fieldset:disabled .btn {
 .btn-primary.active,
 .show>.btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-check:checked+.btn-primary:focus,
@@ -3574,8 +3574,8 @@ fieldset:disabled .btn {
 .btn-primary:disabled,
 .btn-primary.disabled {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-secondary {
@@ -3630,7 +3630,7 @@ fieldset:disabled .btn {
     font-size: 18px;
     font-weight: 600;
     background-color: #fff;
-    border-color: #FEE119;
+    border-color: #5A8039;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -3638,15 +3638,15 @@ fieldset:disabled .btn {
 
 .btn-success:hover {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-check:focus+.btn-success,
 .btn-success:focus {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 69, 158, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(0, 94, 172, 0.5);
 }
@@ -3657,8 +3657,8 @@ fieldset:disabled .btn {
 .btn-success.active,
 .show>.btn-success.dropdown-toggle {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-check:checked+.btn-success:focus,
@@ -3673,8 +3673,8 @@ fieldset:disabled .btn {
 .btn-success:disabled,
 .btn-success.disabled {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-info {
@@ -3913,16 +3913,16 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-    color: #FEE119;
-    border-color: #FEE119;
+    color: #5A8039;
+    border-color: #5A8039;
     --bs-btn-active-color: black !important;
     --bs-btn-active-bg: white !important;
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-check:checked+.btn-outline-primary,
@@ -3931,13 +3931,13 @@ fieldset:disabled .btn {
 .btn-outline-primary.active,
 .btn-outline-primary.dropdown-toggle.show {
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .btn-outline-primary:disabled,
 .btn-outline-primary.disabled {
-    color: #FEE119;
+    color: #5A8039;
     background-color: transparent;
 }
 
@@ -4237,12 +4237,12 @@ fieldset:disabled .btn {
 
 .btn-link {
     font-weight: 400;
-    color: #FEE119;
+    color: #5A8039;
     text-decoration: underline;
 }
 
 .btn-link:hover {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .btn-link:disabled,
@@ -4602,7 +4602,7 @@ fieldset:disabled .btn {
 .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #FEE119;
+    background-color: #5A8039;
 }
 
 .dropdown-item.disabled,
@@ -4650,7 +4650,7 @@ fieldset:disabled .btn {
 .dropdown-menu-dark .dropdown-item.active,
 .dropdown-menu-dark .dropdown-item:active {
     color: #fff;
-    background-color: #FEE119;
+    background-color: #5A8039;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled,
@@ -4811,7 +4811,7 @@ fieldset:disabled .btn {
 .nav-link {
     display: block;
     padding: 0.5rem 1rem;
-    color: #FEE119;
+    color: #5A8039;
     text-decoration: none;
     -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
@@ -4828,7 +4828,7 @@ fieldset:disabled .btn {
 
 .nav-link:hover,
 .nav-link:focus {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .nav-link.disabled {
@@ -4883,7 +4883,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #FEE119;
+    background-color: #5A8039;
 }
 
 .nav-fill>.nav-link,
@@ -6010,7 +6010,7 @@ fieldset:disabled .btn {
 .page-link {
     position: relative;
     display: block;
-    color: #FEE119;
+    color: #5A8039;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #dee2e6;
@@ -6031,14 +6031,14 @@ fieldset:disabled .btn {
 
 .page-link:hover {
     z-index: 2;
-    color: #FEE119;
+    color: #5A8039;
     background-color: #e9ecef;
     border-color: #dee2e6;
 }
 
 .page-link:focus {
     z-index: 3;
-    color: #FEE119;
+    color: #5A8039;
     background-color: #e9ecef;
     outline: 0;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 32, 74, 0.25);
@@ -6052,8 +6052,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .page-item.disabled .page-link {
@@ -6275,7 +6275,7 @@ fieldset:disabled .btn {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #FEE119;
+    background-color: #5A8039;
     -webkit-transition: width 0.6s ease;
     -o-transition: width 0.6s ease;
     transition: width 0.6s ease;
@@ -6380,8 +6380,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #FEE119;
-    border-color: #FEE119;
+    background-color: #5A8039;
+    border-color: #5A8039;
 }
 
 .list-group-item+.list-group-item {
@@ -8040,12 +8040,12 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .link-primary:hover,
 .link-primary:focus {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .link-secondary {
@@ -8550,7 +8550,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-    border-color: #FEE119 !important;
+    border-color: #5A8039 !important;
 }
 
 .border-secondary {
@@ -9537,7 +9537,7 @@ body {
 
 .bg-success {
     --bs-bg-opacity: 1;
-    background-color: #FEE119 !important;
+    background-color: #5A8039 !important;
     color: #000 !important;
     font-weight: 600;
 }
@@ -13484,8 +13484,8 @@ body {
 
 .site-nav .site-navigation .site-menu>li.cta-button a:hover {
     color: #000;
-    background: #FEE119;
-    border-color: #FEE119;
+    background: #5A8039;
+    border-color: #5A8039;
 }
 
 .site-nav .site-navigation .site-menu>li.active>a {
@@ -13568,7 +13568,7 @@ body {
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown .active a {
-    color: #FEE119 !important;
+    color: #5A8039 !important;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li {
@@ -13584,7 +13584,7 @@ body {
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li>a:hover {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>a:before {
@@ -13600,13 +13600,13 @@ body {
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>.dropdown li a:hover,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>ul li a:hover {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:hover>a,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:active>a,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:focus>a {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .site-nav .site-navigation .site-menu .has-children:hover>a,
@@ -13761,7 +13761,7 @@ body {
 }
 
 .site-mobile-menu .site-nav-wrap a:hover {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .site-mobile-menu .site-nav-wrap li {
@@ -13770,7 +13770,7 @@ body {
 }
 
 .site-mobile-menu .site-nav-wrap li.active>a {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
@@ -13905,11 +13905,11 @@ body {
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a:hover,
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a.active {
-    color: #FEE119 !important;
+    color: #5A8039 !important;
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li.active a {
-    color: #FEE119 !important;
+    color: #5A8039 !important;
 }
 
 .sticky-wrapper .shrink {
@@ -14085,7 +14085,7 @@ textarea {
 }
 
 .menu-bg-wrap {
-    background-color: #FEE119;
+    background-color: #5A8039;
     padding: 20px 30px;
     position: relative;
     float: left;
@@ -14100,7 +14100,11 @@ textarea {
     background-size: cover;
     background-position: cnter center;
     background-repeat: no-repeat;
-    background-color: #FEE119;
+    background-color: #5A8039;
+}
+
+.hero-M {
+    height: 10vh;
 }
 
 .hero.overlay {
@@ -14174,7 +14178,7 @@ textarea {
 }
 
 .hero .form-search .btn {
-    background-color: #FEE119;
+    background-color: #5A8039;
     padding-left: 30px;
     padding-right: 30px;
     color: black;
@@ -14198,6 +14202,14 @@ textarea {
 .hero-slide .img {
     height: 100vh;
     min-height: 600px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+.hero-slide .img-M {
+    height: 10vh;
+    min-height: 140px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -14381,7 +14393,7 @@ textarea {
 
 .property-slider-wrap .tns-nav button.tns-nav-active:before,
 .img-property-slide-wrap .tns-nav button.tns-nav-active:before {
-    background-color: #FEE119;
+    background-color: #5A8039;
 }
 
 .property-item.mb-30 {
@@ -14538,7 +14550,7 @@ textarea {
 
 .feature-h:hover [class^="icon-"],
 .feature-h:focus [class^="icon-"] {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .img-about img {
@@ -14568,7 +14580,7 @@ textarea {
     width: 40px;
     height: 40px;
     color: #fff;
-    background: #FEE119;
+    background: #5A8039;
     border-radius: 50%;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14595,8 +14607,8 @@ textarea {
 }
 
 .social.dark-hover a:hover {
-    color: #FEE119;
-    border: 2px solid #FEE119;
+    color: #5A8039;
+    border: 2px solid #5A8039;
 }
 
 .links-arrow-before li {
@@ -14716,7 +14728,7 @@ textarea {
     padding: 7px 20px;
     border-radius: 30px;
     background: rgba(0, 32, 74, 0.1);
-    color: #FEE119;
+    color: #5A8039;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14725,7 +14737,7 @@ textarea {
 
 #property-nav span:hover,
 #property-nav span.active {
-    background: #FEE119;
+    background: #5A8039;
     color: #fff !important;
 }
 
@@ -14737,7 +14749,7 @@ textarea {
 
 #property-nav .prev:hover,
 #property-nav .next:hover {
-    color: #FEE119;
+    color: #5A8039;
 }
 
 #property-nav .prev {
@@ -14777,7 +14789,7 @@ textarea {
 }
 
 .box-feature [class^="flaticon-"] {
-    color: #FEE119;
+    color: #5A8039;
     font-size: 60px;
     margin: 0 0 10px 0;
     display: block;
@@ -14793,13 +14805,13 @@ textarea {
     font-weight: 700;
     border-radius: 50%;
     background: rgba(0, 32, 74, 0.1);
-    color: #FEE119;
+    color: #5A8039;
     text-align: center;
 }
 
 .custom-pagination a:hover,
 .custom-pagination a.active {
-    background: #FEE119;
+    background: #5A8039;
     color: #fff;
 }
 
@@ -14866,7 +14878,7 @@ textarea {
 }
 
 .testimonial-slider-wrap .tns-nav button.tns-nav-active:before {
-    background-color: #FEE119;
+    background-color: #5A8039;
 }
 
 #testimonial-nav span {
@@ -14875,7 +14887,7 @@ textarea {
     padding: 7px 20px;
     border-radius: 30px;
     background: rgba(0, 32, 74, 0.1);
-    color: #FEE119;
+    color: #5A8039;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14884,7 +14896,7 @@ textarea {
 
 #testimonial-nav span:hover,
 #testimonial-nav span.active {
-    background: #FEE119;
+    background: #5A8039;
     color: #fff !important;
 }
 
@@ -14951,7 +14963,7 @@ nav[aria-label="breadcrumb"] li:before {
     float: left;
     width: 44px;
     height: 44px;
-    background: #FEE119;
+    background: #5A8039;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -14981,7 +14993,7 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer {
-    background: #FEE119;
+    background: #5A8039;
     font-size: 14px;
     color: #fff;
     padding: 70px 0;
@@ -15004,13 +15016,13 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer a:hover:before {
-    background: #FEE119;
+    background: #5A8039;
 }
 
 .site-footer .footer-cta h2,
 .site-footer .footer-cta .h2 {
     font-size: 30px;
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .site-footer .btn:before {
@@ -15028,7 +15040,7 @@ nav[aria-label="breadcrumb"] li:before {
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 15px;
-    color: #FEE119;
+    color: #5A8039;
 }
 
 .site-footer .widget .links {
@@ -15066,6 +15078,6 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer .social li a:hover {
-    background: #FEE119;
+    background: #5A8039;
     color: #fff;
 }
