--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -28,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #5A8039;
+    background-color: #000000;
     z-index: 9999;
     display: flex;
     align-items: center;
@@ -63,7 +63,7 @@ body {
 
     100% {
         transform: rotate(360deg);
-        box-shadow: 1px 5px 2px #5A8039;
+        box-shadow: 1px 5px 2px #000000;
     }
 }
 
@@ -269,12 +269,12 @@ sup {
 }
 
 a {
-    color: #5A8039;
+    color: #000000;
     text-decoration: underline;
 }
 
 a:hover {
-    color: 5A8039;
+    color: 000000;
 }
 
 a:not([href]):not([class]),
@@ -2875,8 +2875,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input:checked {
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .form-check-input:checked[type="checkbox"] {
@@ -2888,8 +2888,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -2987,7 +2987,7 @@ textarea.form-control-lg {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #5A8039;
+    background-color: #000000;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3024,7 +3024,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #5A8039;
+    background-color: #000000;
     border: 0;
     border-radius: 1rem;
     -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3533,21 +3533,21 @@ fieldset:disabled .btn {
 
 .btn-primary {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-primary:hover {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-check:focus+.btn-primary,
 .btn-primary:focus {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(38, 65, 101, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(38, 65, 101, 0.5);
 }
@@ -3558,8 +3558,8 @@ fieldset:disabled .btn {
 .btn-primary.active,
 .show>.btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-check:checked+.btn-primary:focus,
@@ -3574,8 +3574,8 @@ fieldset:disabled .btn {
 .btn-primary:disabled,
 .btn-primary.disabled {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-secondary {
@@ -3630,7 +3630,7 @@ fieldset:disabled .btn {
     font-size: 18px;
     font-weight: 600;
     background-color: #fff;
-    border-color: #5A8039;
+    border-color: #000000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -3638,15 +3638,15 @@ fieldset:disabled .btn {
 
 .btn-success:hover {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-check:focus+.btn-success,
 .btn-success:focus {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 69, 158, 0.5);
     box-shadow: 0 0 0 0.25rem rgba(0, 94, 172, 0.5);
 }
@@ -3657,8 +3657,8 @@ fieldset:disabled .btn {
 .btn-success.active,
 .show>.btn-success.dropdown-toggle {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-check:checked+.btn-success:focus,
@@ -3673,8 +3673,8 @@ fieldset:disabled .btn {
 .btn-success:disabled,
 .btn-success.disabled {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-info {
@@ -3913,16 +3913,16 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-    color: #5A8039;
-    border-color: #5A8039;
+    color: #000000;
+    border-color: #000000;
     --bs-btn-active-color: black !important;
     --bs-btn-active-bg: white !important;
 }
 
 .btn-outline-primary:hover {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-check:checked+.btn-outline-primary,
@@ -3931,13 +3931,13 @@ fieldset:disabled .btn {
 .btn-outline-primary.active,
 .btn-outline-primary.dropdown-toggle.show {
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .btn-outline-primary:disabled,
 .btn-outline-primary.disabled {
-    color: #5A8039;
+    color: #000000;
     background-color: transparent;
 }
 
@@ -4237,12 +4237,12 @@ fieldset:disabled .btn {
 
 .btn-link {
     font-weight: 400;
-    color: #5A8039;
+    color: #000000;
     text-decoration: underline;
 }
 
 .btn-link:hover {
-    color: #5A8039;
+    color: #000000;
 }
 
 .btn-link:disabled,
@@ -4602,7 +4602,7 @@ fieldset:disabled .btn {
 .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #5A8039;
+    background-color: #000000;
 }
 
 .dropdown-item.disabled,
@@ -4650,7 +4650,7 @@ fieldset:disabled .btn {
 .dropdown-menu-dark .dropdown-item.active,
 .dropdown-menu-dark .dropdown-item:active {
     color: #fff;
-    background-color: #5A8039;
+    background-color: #000000;
 }
 
 .dropdown-menu-dark .dropdown-item.disabled,
@@ -4811,7 +4811,7 @@ fieldset:disabled .btn {
 .nav-link {
     display: block;
     padding: 0.5rem 1rem;
-    color: #5A8039;
+    color: #000000;
     text-decoration: none;
     -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
     -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
@@ -4828,7 +4828,7 @@ fieldset:disabled .btn {
 
 .nav-link:hover,
 .nav-link:focus {
-    color: #5A8039;
+    color: #000000;
 }
 
 .nav-link.disabled {
@@ -4883,7 +4883,7 @@ fieldset:disabled .btn {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
     color: #fff;
-    background-color: #5A8039;
+    background-color: #000000;
 }
 
 .nav-fill>.nav-link,
@@ -6010,7 +6010,7 @@ fieldset:disabled .btn {
 .page-link {
     position: relative;
     display: block;
-    color: #5A8039;
+    color: #000000;
     text-decoration: none;
     background-color: #fff;
     border: 1px solid #dee2e6;
@@ -6031,14 +6031,14 @@ fieldset:disabled .btn {
 
 .page-link:hover {
     z-index: 2;
-    color: #5A8039;
+    color: #000000;
     background-color: #e9ecef;
     border-color: #dee2e6;
 }
 
 .page-link:focus {
     z-index: 3;
-    color: #5A8039;
+    color: #000000;
     background-color: #e9ecef;
     outline: 0;
     -webkit-box-shadow: 0 0 0 0.25rem rgba(0, 32, 74, 0.25);
@@ -6052,8 +6052,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
     z-index: 3;
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .page-item.disabled .page-link {
@@ -6275,7 +6275,7 @@ fieldset:disabled .btn {
     color: #fff;
     text-align: center;
     white-space: nowrap;
-    background-color: #5A8039;
+    background-color: #000000;
     -webkit-transition: width 0.6s ease;
     -o-transition: width 0.6s ease;
     transition: width 0.6s ease;
@@ -6380,8 +6380,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #5A8039;
-    border-color: #5A8039;
+    background-color: #000000;
+    border-color: #000000;
 }
 
 .list-group-item+.list-group-item {
@@ -8040,12 +8040,12 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-    color: #5A8039;
+    color: #000000;
 }
 
 .link-primary:hover,
 .link-primary:focus {
-    color: #5A8039;
+    color: #000000;
 }
 
 .link-secondary {
@@ -8550,7 +8550,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-    border-color: #5A8039 !important;
+    border-color: #000000 !important;
 }
 
 .border-secondary {
@@ -9537,7 +9537,7 @@ body {
 
 .bg-success {
     --bs-bg-opacity: 1;
-    background-color: #5A8039 !important;
+    background-color: #000000 !important;
     color: #000 !important;
     font-weight: 600;
 }
@@ -13420,19 +13420,6 @@ body {
     position: relative;
 }
 
-.logo {
-    font-size: 24px;
-    color: black !important;
-    font-weight: 600;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.logo:hover {
-    color: #fff !important;
-}
-
 .mr-6 {
     margin-right: 16px;
 }
@@ -13486,7 +13473,7 @@ body {
     padding: 10px 15px;
     display: inline-block;
     text-decoration: none !important;
-    color: black !important;
+    color: gray !important;
     font-weight: 600;
 }
 
@@ -13497,19 +13484,18 @@ body {
 .site-nav .site-navigation .site-menu>li.cta-button a {
     padding: 6px 20px;
     border: 2px solid rgba(0, 0, 0, 0.1);
-    color: #000;
+    color: gray;
     border-radius: 30px;
 }
 
 .site-nav .site-navigation .site-menu>li.cta-button a:hover {
-    color: #000;
-    background: #5A8039;
-    border-color: #5A8039;
+    color: white;
+    background: #000000;
+    border-color: #000000;
 }
 
 .site-nav .site-navigation .site-menu>li.active>a {
-    color: black !important;
-    text-decoration: underline 2px white !important;
+    color: white !important;
     font-weight: 600;
     font-size: large;
 }
@@ -13588,7 +13574,7 @@ body {
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown .active a {
-    color: #5A8039 !important;
+    color: #000000 !important;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li {
@@ -13604,7 +13590,7 @@ body {
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li>a:hover {
-    color: #5A8039;
+    color: #000000;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>a:before {
@@ -13620,13 +13606,13 @@ body {
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>.dropdown li a:hover,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children>ul li a:hover {
-    color: #5A8039;
+    color: #000000;
 }
 
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:hover>a,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:active>a,
 .site-nav .site-navigation .site-menu .has-children .dropdown>li.has-children:focus>a {
-    color: #5A8039;
+    color: #000000;
 }
 
 .site-nav .site-navigation .site-menu .has-children:hover>a,
@@ -13781,7 +13767,7 @@ body {
 }
 
 .site-mobile-menu .site-nav-wrap a:hover {
-    color: #5A8039;
+    color: #000000;
 }
 
 .site-mobile-menu .site-nav-wrap li {
@@ -13790,7 +13776,7 @@ body {
 }
 
 .site-mobile-menu .site-nav-wrap li.active>a {
-    color: #5A8039;
+    color: #000000;
 }
 
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
@@ -13925,11 +13911,11 @@ body {
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a:hover,
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li>a.active {
-    color: #5A8039 !important;
+    color: #000000 !important;
 }
 
 .sticky-wrapper.is-sticky .site-navbar .site-menu>li.active a {
-    color: #5A8039 !important;
+    color: #000000 !important;
 }
 
 .sticky-wrapper .shrink {
@@ -14105,7 +14091,7 @@ textarea {
 }
 
 .menu-bg-wrap {
-    background-color: #5A8039;
+    background-color: #000000;
     padding: 20px 30px;
     position: relative;
     float: left;
@@ -14120,7 +14106,7 @@ textarea {
     background-size: cover;
     background-position: cnter center;
     background-repeat: no-repeat;
-    background-color: #5A8039;
+    background-color: #000000;
 }
 
 .hero-M {
@@ -14198,7 +14184,7 @@ textarea {
 }
 
 .hero .form-search .btn {
-    background-color: #5A8039;
+    background-color: #000000;
     padding-left: 30px;
     padding-right: 30px;
     color: black;
@@ -14413,7 +14399,7 @@ textarea {
 
 .property-slider-wrap .tns-nav button.tns-nav-active:before,
 .img-property-slide-wrap .tns-nav button.tns-nav-active:before {
-    background-color: #5A8039;
+    background-color: #000000;
 }
 
 .property-item.mb-30 {
@@ -14570,7 +14556,7 @@ textarea {
 
 .feature-h:hover [class^="icon-"],
 .feature-h:focus [class^="icon-"] {
-    color: #5A8039;
+    color: #000000;
 }
 
 .img-about img {
@@ -14600,7 +14586,7 @@ textarea {
     width: 40px;
     height: 40px;
     color: #fff;
-    background: #5A8039;
+    background: #000000;
     border-radius: 50%;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14627,8 +14613,8 @@ textarea {
 }
 
 .social.dark-hover a:hover {
-    color: #5A8039;
-    border: 2px solid #5A8039;
+    color: #000000;
+    border: 2px solid #000000;
 }
 
 .links-arrow-before li {
@@ -14748,7 +14734,7 @@ textarea {
     padding: 7px 20px;
     border-radius: 30px;
     background: rgba(0, 32, 74, 0.1);
-    color: #5A8039;
+    color: #000000;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14757,7 +14743,7 @@ textarea {
 
 #property-nav span:hover,
 #property-nav span.active {
-    background: #5A8039;
+    background: #000000;
     color: #fff !important;
 }
 
@@ -14769,7 +14755,7 @@ textarea {
 
 #property-nav .prev:hover,
 #property-nav .next:hover {
-    color: #5A8039;
+    color: #000000;
 }
 
 #property-nav .prev {
@@ -14834,7 +14820,7 @@ textarea {
 }
 
 .box-feature [class^="flaticon-"] {
-    color: #5A8039;
+    color: #000000;
     font-size: 60px;
     margin: 0 0 10px 0;
     display: block;
@@ -14850,13 +14836,13 @@ textarea {
     font-weight: 700;
     border-radius: 50%;
     background: rgba(0, 32, 74, 0.1);
-    color: #5A8039;
+    color: #000000;
     text-align: center;
 }
 
 .custom-pagination a:hover,
 .custom-pagination a.active {
-    background: #5A8039;
+    background: #000000;
     color: #fff;
 }
 
@@ -14923,7 +14909,7 @@ textarea {
 }
 
 .testimonial-slider-wrap .tns-nav button.tns-nav-active:before {
-    background-color: #5A8039;
+    background-color: #000000;
 }
 
 #testimonial-nav span {
@@ -14932,7 +14918,7 @@ textarea {
     padding: 7px 20px;
     border-radius: 30px;
     background: rgba(0, 32, 74, 0.1);
-    color: #5A8039;
+    color: #000000;
     text-align: center;
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
@@ -14941,7 +14927,7 @@ textarea {
 
 #testimonial-nav span:hover,
 #testimonial-nav span.active {
-    background: #5A8039;
+    background: #000000;
     color: #fff !important;
 }
 
@@ -15008,7 +14994,7 @@ nav[aria-label="breadcrumb"] li:before {
     float: left;
     width: 44px;
     height: 44px;
-    background: #5A8039;
+    background: #000000;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -15038,7 +15024,7 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer {
-    background: #5A8039;
+    background: #000000;
     font-size: 14px;
     color: #fff;
     padding: 70px 0;
@@ -15061,13 +15047,13 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer a:hover:before {
-    background: #5A8039;
+    background: #000000;
 }
 
 .site-footer .footer-cta h2,
 .site-footer .footer-cta .h2 {
     font-size: 30px;
-    color: #5A8039;
+    color: #000000;
 }
 
 .site-footer .btn:before {
@@ -15085,7 +15071,7 @@ nav[aria-label="breadcrumb"] li:before {
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 15px;
-    color: #5A8039;
+    color: #000000;
 }
 
 .site-footer .widget .links {
@@ -15123,6 +15109,6 @@ nav[aria-label="breadcrumb"] li:before {
 }
 
 .site-footer .social li a:hover {
-    background: #5A8039;
+    background: #000000;
     color: #fff;
 }
