--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -9538,7 +9538,7 @@ body {
 .bg-success {
     --bs-bg-opacity: 1;
     background-color: #000000 !important;
-    color: #000 !important;
+    color: white !important;
     font-weight: 600;
 }
 
