--- a/src/styles/Globall.css
+++ b/src/styles/Globall.css
@@ -112,7 +112,7 @@ a:hover {
 }
 
 .btn.btn-primary {
-    color: black;
+    color: white;
     font-weight: 600;
 }
 
@@ -656,7 +656,7 @@ a:hover {
     text-transform: uppercase;
     font-size: 13px;
     letter-spacing: .1em;
-    color: black;
+    color: white;
     font-weight: 400;
 }
 
@@ -1009,9 +1009,7 @@ a:hover {
 
 .nav-pills .nav-item .btn:hover,
 .nav-pills .nav-item .btn.active {
-    color: black;
-    font-size: 18px;
-    font-weight: 600;
+    color: white;
 }
 
 .property-item {
