--- a/src/styles/Global.css
+++ b/src/styles/Global.css
@@ -14194,7 +14194,7 @@ textarea {
     background-color: #000000;
     padding-left: 30px;
     padding-right: 30px;
-    color: black;
+    color: white;
     font-weight: 600;
 }
 
